# poet

./: Cargo.toml  LICENSE  README.md  README.txt
src/: README.md  main.rs
src/poet/: dictionary.rs  mod.rs  server.rs  snippet.rs
src/poet/client/: datamuse.rs  mod.rs
static/: analyze.css  colors.css  index.js  lookup.css  main.css
templates/: analyze.html.tera  index.html.tera  lookup.html.tera
