[package]
name = "poet"
version = "0.1.0"
authors = ["Christopher Tuttle <16658784+christopher-tuttle@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33.3"
regex = "1"
lazy_static = "1"
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0-rc.1"
url = "2.2.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
